--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "emotion": "^9.2.12",
+    "react-emotion": "^9.2.12"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
@@ -46,7 +49,7 @@
     "rollup-plugin-postcss-modules": "1.0.8",
     "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-url": "^1.4.0",
-    "typescript": "^2.8.3"
+    "typescript": "^3.1.1"
   },
   "files": [
     "dist"
